# llm-inflam

./: .gitignore  LICENSE  README.md
restate/: debug.py  restate-vllm_041_cu118_p310.sh  restate-vllm_084_cu118_p311.sh
vllm_inference/: aging_generate.py  case_generate.ipynb  case_generate_pipeline.py  case_generation.py  config.yml  csv2context_map_dict.py  csv2yml.py  main.py  model_processor.py  model_vllm_inference.sh  patient_info_dict.csv  patient_info_dict.yml  patient_info_dict_initial.csv  pyproject.toml  requirement.txt  temp.yml
vllm_inference/data/cache_file/: health_info-main_analysis-result-example-zjh.jsonl
vllm_inference/data/result/: health_info-main_analysis-result-example.jsonl
vllm_inference/data/source_data/: health_info_example.jsonl
vllm_inference/prompts/: additional_analysis.txt  chinese_prompt.txt  inflam_20251105.txt  inflam_20251105_en.txt  main_analysis.txt  sensitivity_analysis.txt
vllm_inference/src/case_generation/: case_generate_pipeline.py  case_generation.py  csv2context_map_dict.py
vllm_inference/src/utils/: file_split.py  json_extract.py  logger.py  show_jsonl.py
